# embeddings

./: .gitignore  README.md  channel_videos.csv  channel_videos_short.csv  chunk_data_single_row.py  combine_data.py  combine_embeddings.py  create_embeddings.py  enter_transcripts.py  main.py  main2.py  main_local.py  main_scikit.py  main_youtube_transcriber.py  pyproject.toml  requirements.txt  save_videos.py  setup.py  times_for_transcribing.txt  vercel.json
auxiliary_utils/: chunk_data.py  chunk_data_single_row.py  combine_data.py  combine_embeddings.py  create_embeddings.py  enter_transcripts.py  main.py  main2.py  save_videos.py
downloads/: downloader.py
models/: embedding_generator.py  nearest_neighbors_search.py
services/: llm_handler.py
src/auxiliary_utils/: chunk_data.py  chunk_data_single_row.py  combine_data.py  combine_embeddings.py  create_embeddings.py  enter_transcripts.py  main.py  main2.py  save_videos.py
src/downloads/: downloader.py
src/models/: embedding_generator.py  nearest_neighbors_search.py
src/services/: llm_handler.py
src/text_processing/: text_processor.py
src/transcription/: transcriber.py
src/video_selection/: video_selector.py
src/youtube_channel_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
text_processing/: text_processor.py
transcription/: transcriber.py
video_selection/: video_selector.py
youtube/: bulk_transcribe_youtube_videos_from_playlist.py
