[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project]
name = "youtube_channel_search"
version = "0.1.0"
description = "A brief description of the project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "openai"
]
